BuildHughes/translation-tool/inputs/source_meta/objects/Hsvc_CaseActivity__c.object
<CustomObject>
	<fields>
        <fullName>Hsvc_RepDocumentID__c</fullName>
        <label>Representative&apos;s Document ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RepFirstName__c</fullName>
        <label>Representative&apos;s First Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RepLastName__c</fullName>
        <label>Representative&apos;s Last Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RepresentativeDocumentType__c</fullName>
        <label>Representative&apos;s Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ecuador Citizenship Card</fullName>
                </value>
                <value>
                    <fullName>Ecuador Foreigner Id</fullName>
                </value>
                <value>
                    <fullName>Ecuador Tax Identification Number (RUC)</fullName>
                </value>
                <value>
                    <fullName>Peru Foreigner ID (CE)</fullName>
                </value>
                <value>
                    <fullName>Peru Tax Identification Number (RUC)</fullName>
                </value>
                <value>
                    <fullName>Peru National Identity Document (DNI)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_430, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_430))&amp;&quot;YAHS_PRT_PP_AccountDetail?id=&quot;&amp;Hsvc_Account__r.Id,Hsvc_Account__r.SAN__c,&apos;_self&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Actual_Issue__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activate service</fullName>
                </value>
                <value>
                    <fullName>Adjustments not applied</fullName>
                </value>
                <value>
                    <fullName>Apply adjustments</fullName>
                </value>
                <value>
                    <fullName>Bad Number</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>De-install Equipment</fullName>
                </value>
                <value>
                    <fullName>Dispatch Tech</fullName>
                </value>
                <value>
                    <fullName>Educated Customer</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Escalated to Hughes</fullName>
                </value>
                <value>
                    <fullName>Escalated to SIC</fullName>
                </value>
                <value>
                    <fullName>Escalated to Supervisor</fullName>
                </value>
                <value>
                    <fullName>Give Courtesy Token(s)</fullName>
                </value>
                <value>
                    <fullName>Inform customer</fullName>
                </value>
                <value>
                    <fullName>Inform management Customer Service Hughes</fullName>
                </value>
                <value>
                    <fullName>Inform management Field Service Hughes</fullName>
                </value>
                <value>
                    <fullName>Install - Escalate</fullName>
                </value>
                <value>
                    <fullName>Install - Updated</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Located</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Not located</fullName>
                </value>
                <value>
                    <fullName>Not Updated</fullName>
                </value>
                <value>
                    <fullName>Prioritize dispatch tech</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Process Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActivityCode__c</fullName>
        <description>Activity Code of ActivityType selected</description>
        <formula>ActivityType__r.ActivityCode__c</formula>
        <label>Activity Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityParentCaseId__c</fullName>
        <description>Id of Parent case</description>
        <formula>Case__r.Parent.Id</formula>
        <label>Activity&apos;s Parent Case Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Type</label>
        <referenceTo>Hsvc_ActivityType__c</referenceTo>
        <relationshipLabel>Case Activities</relationshipLabel>
        <relationshipName>Case_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Type_Formula__c</fullName>
        <formula>ActivityType__r.Activity_Name_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Issue__c</fullName>
        <label>Actual Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Request_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd party Device Issue</fullName>
                </value>
                <value>
                    <fullName>Account Issue</fullName>
                </value>
                <value>
                    <fullName>Account Name (Misspelling)</fullName>
                </value>
                <value>
                    <fullName>Account Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Activate new service</fullName>
                </value>
                <value>
                    <fullName>Agent Callback</fullName>
                </value>
                <value>
                    <fullName>Amount Due</fullName>
                </value>
                <value>
                    <fullName>Application Issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Customer</fullName>
                </value>
                <value>
                    <fullName>Application Issue - hughes</fullName>
                </value>
                <value>
                    <fullName>Authorized Contact</fullName>
                </value>
                <value>
                    <fullName>Automated Call - Activation</fullName>
                </value>
                <value>
                    <fullName>Available schedule</fullName>
                </value>
                <value>
                    <fullName>Bad Cables/Wiring</fullName>
                </value>
                <value>
                    <fullName>Bad Modem</fullName>
                </value>
                <value>
                    <fullName>Bad Radio</fullName>
                </value>
                <value>
                    <fullName>Bad Treatment - CSR</fullName>
                </value>
                <value>
                    <fullName>Bad Treatment - Technical</fullName>
                </value>
                <value>
                    <fullName>Bad website</fullName>
                </value>
                <value>
                    <fullName>Bad website/url</fullName>
                </value>
                <value>
                    <fullName>Bank Strike</fullName>
                </value>
                <value>
                    <fullName>Bill Date</fullName>
                </value>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Billing Issue</fullName>
                </value>
                <value>
                    <fullName>Bill Notification</fullName>
                </value>
                <value>
                    <fullName>Boleto to credit card</fullName>
                </value>
                <value>
                    <fullName>Boleto to debit</fullName>
                </value>
                <value>
                    <fullName>Bonus Zone</fullName>
                </value>
                <value>
                    <fullName>Browser Message</fullName>
                </value>
                <value>
                    <fullName>Business System Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Group__c</fullName>
        <label>Current Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_RP_Case_ProtocolID__c</fullName>
        <formula>Case__r.HSvc_ProtocolId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case ProtocolID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_RP_Case_Resolution__c</fullName>
        <formula>Case__r.HSvc_ResolutionCodeRule__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Resolution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOrigin__c</fullName>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>AGO</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>Customer Electronic Services</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>FCC</fullName>
                </value>
                <value>
                    <fullName>Integrated Voice Response</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Self-Service</fullName>
                </value>
                <value>
                    <fullName>Network Operations Center</fullName>
                </value>
                <value>
                    <fullName>QA Tool</fullName>
                </value>
                <value>
                    <fullName>Corp Officer</fullName>
                </value>
                <value>
                    <fullName>Other Agency</fullName>
                </value>
                <value>
                    <fullName>Bulk Upload</fullName>
                </value>
                <value>
                    <fullName>CS Escalation/Trend</fullName>
                </value>
                <value>
                    <fullName>Proactive Monitoring</fullName>
                </value>
                <value>
                    <fullName>Vantive</fullName>
                </value>
                <value>
                    <fullName>Phone - inbound</fullName>
                </value>
                <value>
                    <fullName>Phone - outbound</fullName>
                </value>
                <value>
                    <fullName>Self-care</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_430, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_430))&amp;&quot;apex/&quot;&amp;&quot;YAHS_PRT_PP_AccountDetail?id=&quot;&amp;Case__r.Id,Case__r.CaseNumber,&apos;_self&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Activities</relationshipLabel>
        <relationshipName>Case_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Created_By_Name__c</fullName>
        <formula>CreatedBy.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Type__c</fullName>
        <label>Customer Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_ProductGrouping__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acquisition Information</fullName>
                </value>
                <value>
                    <fullName>Add/Upgrade Service</fullName>
                </value>
                <value>
                    <fullName>Billing Info</fullName>
                </value>
                <value>
                    <fullName>Bill Inquiry/Dispute</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Recording</fullName>
                </value>
                <value>
                    <fullName>Cancel - Change of Address</fullName>
                </value>
                <value>
                    <fullName>Cancel - Competition</fullName>
                </value>
                <value>
                    <fullName>Cancel - Financial</fullName>
                </value>
                <value>
                    <fullName>Cancellation Information</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Cancel - Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Cancel - Sales Practices</fullName>
                </value>
                <value>
                    <fullName>Cancel Service</fullName>
                </value>
                <value>
                    <fullName>Cancel - Technical</fullName>
                </value>
                <value>
                    <fullName>Cancel - Treatment</fullName>
                </value>
                <value>
                    <fullName>Cancel VSAT</fullName>
                </value>
                <value>
                    <fullName>Cannot Connect to Wi-Fi Booster</fullName>
                </value>
                <value>
                    <fullName>Cannot find Wi-Fi Network</fullName>
                </value>
                <value>
                    <fullName>Cannot Login</fullName>
                </value>
                <value>
                    <fullName>Cannot Receive Emails</fullName>
                </value>
                <value>
                    <fullName>Cannot Send Emails</fullName>
                </value>
                <value>
                    <fullName>Change Due Date - Temporary</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Change Payment Type</fullName>
                </value>
                <value>
                    <fullName>Change Service Plan</fullName>
                </value>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Collect Payment</fullName>
                </value>
                <value>
                    <fullName>Contract / Policies / Terms of Use</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>De_Escalation_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>De-Escalation Code</label>
        <referenceTo>YAHS_DeEscalationCode__c</referenceTo>
        <relationshipLabel>Case Activities</relationshipLabel>
        <relationshipName>Case_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_Copy__c</fullName>
        <label>Activity Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <label>Diagnosis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Follow Up Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration_of_Activity__c</fullName>
        <formula>IF(
(End_Date_Time__c - Start_Date_Time__c)&gt; 0 ,
TEXT( FLOOR(End_Date_Time__c - Start_Date_Time__c) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD((End_Date_Time__c - Start_Date_Time__c) * 24, 24 ) ) ) &amp; &quot; hour(s) &quot;
&amp; TEXT( ROUND( MOD((End_Date_Time__c - Start_Date_Time__c) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minute(s) &quot;
&amp; TEXT(ROUND(MOD((End_Date_Time__c - Start_Date_Time__c) * 24 * 3600, 60),0)) &amp; &quot;second(s)&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration of Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_of_Activity_rawdata__c</fullName>
        <formula>End_Date_Time__c -  Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration of Activity_rawdata</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalate_to_Level_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalate to Level 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Tech_Education_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Tech Education Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_ActivityName__c</fullName>
        <formula>ActivityType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_AssetServiceStatus__c</fullName>
        <label>Asset Service Status?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Case Activities</relationshipLabel>
        <relationshipName>Case_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_CCROldValue__c</fullName>
        <label>CCR Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CaseAccountId__c</fullName>
        <formula>Case__r.AccountId</formula>
        <label>Case AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CaseStatus__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Awaiting SPR Code Release</fullName>
                </value>
                <value>
                    <fullName>Build Out Released</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancelled or Duplicate</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete—Impact</fullName>
                </value>
                <value>
                    <fullName>Complete—No issues</fullName>
                </value>
                <value>
                    <fullName>Complete—Pending Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>Director Approved and Scheduled</fullName>
                </value>
                <value>
                    <fullName>EMRB Approved</fullName>
                </value>
                <value>
                    <fullName>ENG - SPR Active</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Escalated to SIC</fullName>
                    <label>Escalated to Regulator</label>
                </value>
                <value>
                    <fullName>Failed QA</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Hold-Awaiting Hardware</fullName>
                </value>
                <value>
                    <fullName>Hold—Awaiting Information</fullName>
                </value>
                <value>
                    <fullName>Implementation Phase</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Investigation Closed</fullName>
                </value>
                <value>
                    <fullName>Investigation Open</fullName>
                </value>
                <value>
                    <fullName>MRB Approved</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>No Problem Found</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Open - Acknowledge</fullName>
                </value>
                <value>
                    <fullName>Open - De-escalate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseSubtype__c</fullName>
        <label>Case Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Cancel Core Service (Terminate)</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Compliance with Regulator</fullName>
                </value>
                <value>
                    <fullName>De-Install (System)</fullName>
                </value>
                <value>
                    <fullName>Email Issue</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Equipment Recovery</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>General information</fullName>
                </value>
                <value>
                    <fullName>Hughes Truck Roll</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>Internet Performance</fullName>
                </value>
                <value>
                    <fullName>New Installation</fullName>
                </value>
                <value>
                    <fullName>Outage</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Outbound Program</fullName>
                </value>
                <value>
                    <fullName>Partial Outage</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Regular Process</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Relocation - Deinstall</fullName>
                </value>
                <value>
                    <fullName>Relocation - Reinstall</fullName>
                </value>
                <value>
                    <fullName>Repair Truckroll</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseType__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
                <value>
                    <fullName>Product Support</fullName>
                </value>
                <value>
                    <fullName>Repair Field</fullName>
                </value>
                <value>
                    <fullName>Repair Remote</fullName>
                </value>
                <value>
                    <fullName>Techician Support</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Pre-install</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_ContactName__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CreatedByDSSUName__c</fullName>
        <formula>IF(ISBLANK(CreatedBy.HSvc_DSS_User_Name__c), CreatedBy.Username,CreatedBy.HSvc_DSS_User_Name__c )</formula>
        <label>Created By DSS User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CreatedByNMPUName__c</fullName>
        <formula>IF(ISBLANK(CreatedBy.HSvc_NMP_User_Name__c), CreatedBy.Username,CreatedBy.HSvc_NMP_User_Name__c )</formula>
        <label>Created By NMP User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CreatedByPSUName__c</fullName>
        <formula>CreatedBy.HSvc_PS_User_Name__c</formula>
        <label>Created By PS User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CreatedDate__c</fullName>
        <description>To display the Time component of Created Date in Reports</description>
        <formula>CreatedDate</formula>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_CustomerEmail__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HSvc_EmailTo__c</fullName>
        <label>Email To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Exception__c</fullName>
        <label>Exception</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_HNSProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Case Activities</relationshipLabel>
        <relationshipName>Case_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Internal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_KBExitCode__c</fullName>
        <label>KB Exit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_LastModifiedDSSUName__c</fullName>
        <formula>IF(ISBLANK(LastModifiedBy.HSvc_DSS_User_Name__c), LastModifiedBy.Username, LastModifiedBy.HSvc_DSS_User_Name__c)</formula>
        <label>Last Modified DSS User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_LastModifiedNMPUName__c</fullName>
        <formula>IF(ISBLANK(LastModifiedBy.HSvc_NMP_User_Name__c), LastModifiedBy.Username,LastModifiedBy.HSvc_NMP_User_Name__c)</formula>
        <label>Last Modified NMP User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_LastModifiedPSUName__c</fullName>
        <formula>LastModifiedBy.HSvc_PS_User_Name__c</formula>
        <label>Last Modified PS User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_LatestEventDescription__c</fullName>
        <label>Latest Event Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_LatestWorkOrderEventDateTime__c</fullName>
        <label>Latest WorkOrder Event DateTime</label>
        <type>DateTime</type>
    </fields>
</CustomObject>